editors/tree-sitter-slint/grammar.js
    sourcefile: ($) => repeat($._definition),

    _definition: ($) =>
      choice($.import_statement, $._export, $._local_type, $.rust_attr),

    _local_type: ($) =>
      choice(
        $.struct_definition,
        $.enum_definition,
        $.global_definition,
        $.interface_definition,
        $.component_definition,
      ),

    export_type: ($) => seq(
      field("local_name", $._type_identifier),
      optional(seq("as", field("export_name", $._type_identifier))),
    ),

    exported_definition: ($) => seq(
      "export",
      $._local_type
    ),

    export_statement: ($) => seq(
      "export",
      "{", commaSep($.export_type), optional(","), "}",
      optional(seq("from", field("from", alias($._import_string, $.string_value)), ";"))
    ),

    _rust_attr_args: ($) => seq("(", repeat(choice(/[^()"]+/, $.string_value, $._rust_attr_args)), ")"),

    rust_attr: ($) => seq(repeat1(seq("@rust-attr", $._rust_attr_args)), choice($.exported_definition, $._local_type)),

    import_statement: ($) =>
      seq(
        "import",
        optional(seq("{", commaSep($.import_type), optional(","), "}", "from")),
        alias($._import_string, $.string_value),
        ";",
      ),

    import_type: ($) =>
      seq(
        field("import_name", $.user_type_identifier),
        optional(seq("as", field("local_name", $.user_type_identifier))),
      ),

    component_definition: ($) =>
      seq(
        choice(
          seq(
            // new syntax
            "component",
            field("name", $.user_type_identifier),
          ),
          seq(
            // old syntax
            field("name", $.user_type_identifier),
            ":=",
            field("base_type", $.user_type_identifier),
          ),
        ),
        repeat($.component_modifier),
        $.block,
      ),

    imperative_block: ($) =>
      seq("{", repeat($.imperative_statement), "}"),

    _binding: ($) =>
      field(
        "binding",
        choice(seq($.imperative_block, optional(";")), seq($.expression, ";")),
      ),

    struct_field_definition: ($) =>
      seq(
        field("name", $.simple_identifier),
        ":",
        field("type", $.type),
        optional(seq("=", field("default_value", $.expression))),
      ),

    struct_block: ($) =>
      seq(
        "{",
        commaSep($.struct_field_definition),
        optional(","),
        "}",
      ),

    struct_definition: ($) =>
      seq(
        "struct",
        field("name", $.user_type_identifier),
        optional(":="), // old syntax!
        $.struct_block,
      ),

    block: ($) => seq("{", repeat($._block_statement), "}"),

    _block_statement: ($) =>
      choice(
        $.animate_statement,
        $.binding_alias,
        $.callback,
        $.callback_alias,
        $.callback_event,
        $.changed_event,
        $.children_identifier, // No `;` after this one!
        $.component,
        $.for_loop,
        $.function_definition,
        $.if_statement,
        $.implement_statement,
        $.match_element,
        $.property,
        $.property_assignment,
        $.slot_declaration,
        $.slot_assignment,
        $.slot_forwarding,
        $.states_definition,
        $.transitions_definition,
      ),

    _statement_identifier: ($) =>
      choice($.simple_identifier, alias("slot", $.simple_identifier)),

    property_assignment: ($) =>
      seq(
        field("property", $._statement_identifier),
        ":",
        field(
          "value",
          choice(
            seq($.imperative_block, optional(";")),
            seq($.expression, ";"),
          ),
        ),
      ),

    type: ($) => choice($._type_identifier, $.type_list, $.struct_block),

    expression: ($) =>
      prec.right(
        choice(
          $.closure_expression,
          $.keys,
          $.parens_op,
          $.index_op,
          $.tr,
          $.markdown,
          $.adjacent_string_expression,
          $.value,
          $.gradient_call,
          $.image_call,
          $.reference_identifier,
          $.simple_identifier,
          $.function_call,
          $.member_access,
          $.unary_expression,
          $.binary_expression,
          $.ternary_expression,
        ),
      ),

    binary_expression: ($) =>
      prec.left(
        1,
        choice(
          $._add_binary_expression,
          $._comparison_binary_expression,
          $._logic_binary_expression,
          $._mult_binary_expression,
        ),
      ),

    _add_binary_expression: ($) =>
      prec.left(
        11,
        seq(
          field("left", $.expression),
          field("op", $.add_prec_operator),
          field("right", $.expression),
        ),
      ),

    _comparison_binary_expression: ($) =>
      prec.left(
        9,
        seq(
          field("left", $.expression),
          field("op", $.comparison_operator),
          field("right", $.expression),
        ),
      ),

    _logic_binary_expression: ($) =>
      choice(
        prec.left(
          4,
          seq(
            field("left", $.expression),
            field("op", $.logical_and),
            field("right", $.expression),
          ),
        ),
        prec.left(
          3,
          seq(
            field("left", $.expression),
            field("op", $.logical_or),
            field("right", $.expression),
          ),
        ),
      ),

    _mult_binary_expression: ($) =>
      prec.left(
        12,
        seq(
          field("left", $.expression),
          field("op", $.mult_prec_operator),
          field("right", $.expression),
        ),
      ),

    callback_event: ($) =>
      seq(
        field("name", choice($._statement_identifier, alias("changed", $.simple_identifier))),
        optional(field("arguments", $.arguments)),
        "=>",
        field("action", $._binding),
      ),

    changed_event: ($) =>
      seq(
        "changed",
        field("property", $.simple_identifier),
        "=>",
        field("action", $._binding),
      ),

    function_call: ($) =>
      prec(
        17,
        seq(
          field("name", $.simple_identifier),
          field("arguments", $.arguments),
        ),
      ),

    argument: ($) => $.expression,

    arguments: ($) =>
      prec(
        17,
        seq("(", optional(seq(commaSep1($.argument), optional(","))), ")"),
      ),

    add_prec_operator: (_) => choice("+", "-"),
    _string: ($) =>
      choice(
        seq(
          '"',
          repeat(choice($._unescaped_string_fragment, $.escape_sequence)),
          '"',
        ),
      ),

    escape_sequence: ($) =>
      choice(
        // A single token, so the longest match decides between the three
        // alternatives here and no whitespace can sneak in after the backslash.
        token.immediate(
          seq("\\", choice(/u\{[0-9a-fA-F]+\}/, "n", "\\", '"')),
        ),
        // The "}" is not immediate: the expression may be followed by
        // whitespace, as in "\{ 1 + 2 }".
        seq(token.immediate("\\{"), $.expression, "}"),
        // A backslash that starts no known escape is a semantic error, not a
        // syntax one. Keeping it a node rather than an ERROR avoids wrecking
        // the tree while an escape is still being typed.
        token.immediate("\\"),
      ),

    // Strings in import statements are special.
    // Even though the escape sequences are respected at lexing time, they
    // are then later ignored, so \" does not close the string, but actually produces
    // \" and not ".
    //
    // e.g.:
    //
    // import {Foo} from "\"x";
    //
    // Actually imports from the file \"x
    _import_string: ($) => seq(
      '"',
      repeat(choice(
        $._unescaped_string_fragment,
        token.immediate("\\\\"),
        token.immediate("\\\""),
        token.immediate("\\"))),
      '"',
    ),

    /////////////////////////////////////////////////////////////////////

    _identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_-]*/,
    simple_identifier: ($) => $._identifier,
    builtin_type_identifier: (_) =>
      choice(
        "int",
        "float",
        "bool",
        "string",
        "color",
        "brush",
        "styled-text",
        "physical-length",
        "length",
        "duration",
        "angle",
        "easing",
        "percent",
        "image",
        "relative-font-size",
      ),

    user_type_identifier: ($) => prec(1, $._identifier),
    _type_identifier: ($) =>
      choice($.builtin_type_identifier, $.user_type_identifier),

    value: ($) =>
      prec(10, choice($.anon_struct_block, $.value_list, $._basic_value)),

    _int_number: (_) => /\d+/,
    int_value: ($) => $._int_number,
    string_value: ($) => $._string,
    _basic_value: ($) =>
      choice(
        $.int_value,
        $.float_value,
        $.bool_value,
        $.string_value,
        $.color_value,
        $.physical_length_value,
        $.length_value,
        $.duration_value,
        $.angle_value,
        $.percent_value,
        $.relative_font_size_value,
        $.easing_kind_identifier,
      ),

    // Single-line comment
    line_comment: (_) => token(seq("//", /[^\n\r]*/)),

    // Multi-line comment — handled by the external scanner (src/scanner.c)
    // because Slint supports balanced nesting: /* /* */ */ is valid.
    // block_comment is defined in externals above.
  },
});

function commaSep(rule) {
  return optional(commaSep1(rule));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}

function commaSep2(rule) {
  return seq(rule, ",", rule, repeat(seq(",", rule)));
}
