editors/tree-sitter-slint/corpus/cases.txt
================================================================================
simple
================================================================================

TestCase := Rectangle {

}

--------------------------------------------------------------------------------

(document
  (component_definition
    (type_identifier
      (user_type_identifier))
    (type_identifier
      (user_type_identifier))
    (block)))
