editors/tree-sitter-slint/corpus/empty.txt
================================================================================
empty testcase
================================================================================

--------------------------------------------------------------------------------

(sourcefile)

================================================================================
Line comment
================================================================================
// Line comment
--------------------------------------------------------------------------------

(sourcefile
  (comment))

================================================================================
Line comment with line continuation
================================================================================
// Line comment \
   import { foo } from "bar";
--------------------------------------------------------------------------------

(sourcefile
  (comment)
  (import_statement
    (import_type
      (user_type_identifier))
    (string_value)))

================================================================================
Multiline comment
================================================================================
/* multiline
  comment */
--------------------------------------------------------------------------------

(sourcefile
  (comment))

================================================================================
Several comments
================================================================================
/* c1 *///c2
// c3
/* c2 // c5 */
--------------------------------------------------------------------------------

(sourcefile
  (comment)
  (comment)
  (comment)
  (comment))
