editors/tree-sitter-slint/test/corpus/empty.txt
================================================================================
empty testcase
================================================================================

--------------------------------------------------------------------------------

(sourcefile)

================================================================================
Line comment
================================================================================
// Line comment
--------------------------------------------------------------------------------

(sourcefile
  (line_comment))

================================================================================
Line comment with line continuation
================================================================================
// Line comment \
   import { foo } from "bar";
--------------------------------------------------------------------------------

(sourcefile
  (line_comment)
  (import_statement
    (import_type
      (user_type_identifier))
    (string_value)))

================================================================================
Multiline comment
================================================================================
/* multiline
  comment */
--------------------------------------------------------------------------------

(sourcefile
  (block_comment))

================================================================================
Several comments
================================================================================
/* c1 *///c2
// c3
/* c2 // c5 */
--------------------------------------------------------------------------------

(sourcefile
  (block_comment)
  (line_comment)
  (line_comment)
  (block_comment))
